<resources>
    <string name="app_name">Workout Log</string>
    <string name="Login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="no_account_yet_register_now">No account yet? Register now</string>
    <string name="or">OR</string>
    <string name="log_in">Log in</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="create_an_account">Create an Account</string>
    <string name="error_message_field_empty">This field has to be filled</string>
    <string name="error_message_wrong_email">This email address is not signed up</string>
    <string name="error_message_wrong_password">This password or password is wrong</string>
    <string name="error_message_email_already_used">This email address is already used</string>
    <string name="error_message_email_not_exists">This email address does not exist</string>
    <string name="error_message_confirm_password_wrong">The passwords have to match</string>
    <string name="error_message_password_requirements_not_met">This password does not meet the requirements</string>
    <string name="home">Home</string>
    <string name="exercises">Exercises</string>
    <string name="trainingplans">Trainingplans</string>
    <string name="current_trainingplan">Current Trainingplan</string>
    <string name="start_workout">Start Workout</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="history">History</string>
    <string name="name">Name</string>
    <string name="exercise">Exercise</string>
    <string name="save">Save</string>
    <string name="this_exercise_already_exists">This Exercise already exists</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="delete_question">Delete?</string>
    <string name="really_delete_trainingplan_question">Do you really want to delete this Trainingplan? This cannot be
        returned
    </string>
    <string name="trainingplan">Trainingplan</string>
    <string name="trainingplan_already_exists">This Trainingplan already exists</string>
    <string name="finished">finished</string>
    <string name="routines">Routines</string>
    <string name="routine">Routine</string>
    <string name="routine_already_exists">This Routine already exists</string>
    <string name="really_delete_routine_question">Do you really want to delete this Routine? This cannot be returned
    </string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="rpe">RPE</string>
    <string name="break_seconds">Break (Seconds)</string>
    <string name="drops">Drops</string>
    <string name="choose_exercise">Choose exercise</string>
    <string name="error">Error</string>
    <string name="which_type_of_exercise">Which Type of Exercise?</string>
    <string name="discard">Discard</string>
    <string name="exercise_number">Exercise %s</string>
    <string name="exercise_number_superset">Exercise %s (Superset)</string>
    <string name="exercise_number_dropset">Exercise %s (Dropset)</string>
    <string name="confirm_delete_exercise">Are you sure you want to delete this exercise?</string>
    <string name="add">add</string>
    <string name="select_a_trainingplan">Select a Trainingplan</string>
    <string name="choose_an_interval">Choose an interval</string>
    <string name="choose_a_day_to_start">Choose a day to start</string>
    <string name="deload">Deload</string>
    <string name="pause">Pause</string>
    <string name="create_interval">Create Interval</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="Thursday">T</string>
    <string name="Friday">F</string>
    <string name="Saturday">S</string>
    <string name="Sunday">S</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="deload_after">Deload after</string>
    <string name="volume">Volume</string>
    <string name="weight">Weight</string>
    <string name="cycles">cycles</string>
    <string name="default_cycles_deload">4</string>
    <string name="default_volume_deload">80%</string>
    <string name="default_weight_deload">60%</string>
    <string name="you_have_to_select_tp">You have to select a Trainingplan to continue.</string>
    <string name="you_have_to_choose_interval">You have to choose an interval to continue.</string>
    <string name="you_have_to_finish_interval">You have to finish the interval to continue.</string>
    <string name="you_have_to_choose_start_day">You have to choose a day to start to continue.</string>
    <string name="you_are_about_to_leave">You are about to leave. The changes will be saved.</string>
    <string name="leave">Leave</string>
    <string name="remove">Remove</string>
    <string name="current_tp_cant_delete">This is your current Trainingplan. It can\'t be deleted.</string>
    <string name="exercise_is_part_of_current_tp_cant_delete">This Exercise is part of the current Trainingplan. It
        can\'t be deleted.
    </string>
    <string name="you_cant_add_or_delete_routines_in_yout_current_tp">You can\'t add or delete routines in your current
        Trainingplan.
    </string>
    <string name="interval_num">Interval %s</string>
    <string name="custom_interval">Custom Interval</string>
    <string name="create_current_trainingplan">Create current Trainingplan</string>
    <string name="finish_current_tp">Finish current Trainingplan</string>
    <string name="interval">Interval</string>
    <string name="workout_calender">Workout Calender</string>
    <string name="create_new_current_trainingplan">Create new current Trainingplan</string>
    <string name="no_deload">No Deload</string>
    <string name="deload_after_cycles">Deload after %s cycles</string>
    <string name="volume_">Volume: %s%%</string>
    <string name="weight_">Weight: %s%%</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="create_new_current_tp_old_one_gets_deleted">If you create a new Trainingplan, the current Trainingplan
        gets deleted. Do you want to continue?
    </string>
    <string name="finish_this_plan_no_routines">You have to finish this plan first. There are no routines.</string>
    <string name="start">Start</string>
    <string name="choose_other_workout">Choose other workout</string>
    <string name="choose_from_routines_or_create_new">Choose from Routines or create new?</string>
    <string name="choose_workout">Choose Workout</string>
    <string name="create_new">Create new</string>
    <string name="restday_workout_though">Today is Restday. Workout though?</string>
    <string name="create_workout">Create Workout</string>
    <string name="number_sets">%s. Set</string>
    <string name="history_item_set">Set %1s: %2s reps %3s kg, RPE %4s</string>
    <plurals name="you_have_completed_your_goal">
        <item quantity="one">You have completed your goal: %d set</item>
        <item quantity="other">You have completed your goal: %d sets</item>
    </plurals>
    <string name="next">Next</string>
    <string name="stay">Stay</string>
    <string name="_dropset_">(Dropset)</string>
    <string name="this_is_the_last_exercise">This is the last exercise.</string>
    <string name="this_is_the_first_exercise">This is the first exercise.</string>
    <string name="sure_you_want_leave">Are you sure you want to leave?</string>
    <string name="workout">Workout</string>
    <string name="you_have_to_select_exercises">You have to select exercises.</string>
    <string name="this_is_the_last_workout">This is the last workout.</string>
    <string name="this_is_the_first_workout">This is the first workout.</string>
    <string name="date">%1d.%2d.%3d</string>
    <string name="you_have_not_finished_any_workouts">You have not finished any workouts.</string>
    <string name="this_cannot_be_returned">This cannot be returned.</string>
    <string name="you_have_already_workoud_out_another_workout">You have already worked out today. Do another workout?
    </string>
    <string name="you_have_finished_your_workout_today">You have finished your workout today.</string>
    <string name="pause_today">Pause today</string>
    <string name="today_is_restday_you_should_not_work_out_today">Today is Restday. You should not work out today.
    </string>
    <string name="take_a_look_at_your_history">Take a look at your History.</string>
    <string name="edit_your_current_tp">Edit your current Trainingplan.</string>
    <string name="you_have_not_chosen_your_current_trainingplan">You have not chosen your current Trainingplan.</string>
    <string name="choose">Choose</string>
    <string name="superset_">Superset: %s</string>
    <string name="dropset_">Dropset: %s</string>
    <string name="workout_of_today">Workout of Today</string>
    <string name="data_synchronization">Data Synchronization</string>
    <string name="data_synchronization_dialog_message">Your current data is not synchronized to the cloud. If you have made changes, when you weren\'t logged in, and want to save them to the cloud, press \"Upload\". When you log in to another account and want to download the data, press \"Download\". But if you haven\'t saved your current data, it can be lost.</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="loading">Loading…</string>
    <string name="downloading_data">Downloading data…</string>
    <string name="try_again">Try again</string>
    <string name="an_error_occurred_downloading_the_data">An error occurred downloading the data.</string>
    <string name="uploading_data">Uploading data…</string>
    <string name="an_error_occurred_uploading_the_data">An error occurred uploading the data.</string>
    <string name="do_you_really_want_to_delete_this_exercise_following_wll_be_deleted">Do you really want to delete this
        exercise? Parts of the following Routines will be deleted:
    </string>
    <string name="something_went_wrong_check_internet">Something went wrong. Check your internet connection.</string>
    <string name="this_operation_is_taking_very_long">This operation is taking very long. Cancel?</string>
    <string name="upload_failed">Upload failed. Check your connection.</string>
    <string name="download_failed">Download failed. Check your connection.</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="register_">Register…</string>
    <string name="successfully_registered">Successfully registered. A verification email was sent to your email address.</string>
    <string name="something_went_wrong_sending_verification_email">Something went wrong sending the verification email.</string>
    <string name="email_not_verified">Email not verified</string>
    <string name="send_verification_email_">Send verification email?</string>
    <string name="login_">Login…</string>
    <string name="switch_to_light_theme">Switch to light theme</string>

    <string-array name="exercise_types">
        <item>Normal Exercise</item>
        <item>Supersets</item>
        <item>Dropsets</item>
    </string-array>
</resources>
