<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
           android:id="@+id/menu">
        <item
                android:id="@+id/nav_home"
                android:title="@string/home"
                android:icon="@drawable/ic_home_black_24dp"/>
        <item
                android:id="@+id/nav_exercises"
                android:title="@string/exercises"
                android:icon="@drawable/ic_fitness_center_black_24dp"/>
        <item
                android:id="@+id/nav_trainingplans"
                android:title="@string/trainingplans"
                android:icon="@drawable/ic_list_black_24dp"/>
        <item
                android:id="@+id/nav_current_trainingplan"
                android:title="@string/current_trainingplan"
                android:icon="@drawable/ic_playlist_add_check_black_24dp"/>
        <item
            android:id="@+id/nav_history"
            android:title="@string/history"
            android:icon="@drawable/ic_history_black_24dp"/>
    </group>
    <group android:checkableBehavior="none"
           android:id="@+id/sub_menu">
        <item
                android:id="@+id/nav_start_workout"
                android:title="@string/start_workout"
                android:icon="@drawable/ic_play_arrow_black_24dp"/>
        <item
                android:id="@+id/nav_settings"
                android:title="@string/settings"
                android:icon="@drawable/ic_settings_black_24dp"/>
        <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_person_black_24dp"/>
    </group>
</menu>