<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/padding_login_register_screen_left_right"
              android:paddingStart="@dimen/padding_login_register_screen_left_right"
              android:paddingRight="@dimen/padding_login_register_screen_left_right"
              android:paddingEnd="@dimen/padding_login_register_screen_left_right">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_home_fragment_big"
            android:textColor="?attr/colorPrimary"
            android:text="@string/you_have_not_chosen_your_current_trainingplan"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_home_fragment_top"
    />

    <Button
            android:id="@+id/button_choose_tp_home_fragment_current_tp_not_chosen"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/choose"
            android:textColor="@color/white"
            android:background="@drawable/background_button"
            android:layout_marginTop="@dimen/margin_home_fragment_top"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_home_fragment_big"
            android:textColor="?attr/colorPrimary"
            android:text="@string/take_a_look_at_your_history"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_home_fragment_top"
    />

    <Button
            android:id="@+id/button_history_home_fragment_current_tp_not_chosen"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/history"
            android:textColor="@color/white"
            android:background="@drawable/background_button"
            android:layout_marginTop="@dimen/margin_home_fragment_top"
    />

</LinearLayout>