<?xml version="1.0" encoding="utf-8"?>
<merge
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:id="@+id/ll_goal_dropset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ll_goal_dropset_values"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_top_goal"
            android:orientation="vertical"
    >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sets"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_size_goal"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reps"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_size_goal"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drops"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_size_goal"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/break_seconds"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_size_goal"
        />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_goal_dropset_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/ll_goal_dropset"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/margin_top_goal"
            android:orientation="vertical"
    >

        <TextView
                android:id="@+id/text_view_goal_dropset_sets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_size_goal"/>
        <TextView
                android:id="@+id/text_view_goal_dropset_reps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_size_goal"/>
        <TextView
                android:id="@+id/text_view_goal_dropset_drops"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_size_goal"/>
        <TextView
                android:id="@+id/text_view_goal_dropset_break"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_size_goal"/>

    </LinearLayout>

</merge>