<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
>

    <ImageButton
            android:id="@+id/button_fragment_register_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_colorprimary_24dp"
            android:background="@drawable/background_indirect_button_fragment_register"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_layout_register_fragment_register_section"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/margin_between_fields_login_register_section"
            android:contentDescription="@null"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/constraint_layout_register_fragment_register_section"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_app_name_login_register_screen"
            android:textStyle="bold"
    />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_register_fragment_register_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingRight="@dimen/padding_login_register_screen_left_right"
            android:paddingLeft="@dimen/padding_login_register_screen_left_right"
    >

        <TextView
                android:id="@+id/textview_register_fragment_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/create_an_account"
                android:textSize="@dimen/text_size_login_register_login_register"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
        />

        <com.workoutlog.workoutlog.views.CustomEditText
                android:id="@+id/edittext_fragment_register_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textfield_height_login_register"
                app:hint="@string/email"
                app:layout_constraintTop_toBottomOf="@id/textview_register_fragment_register"
                android:layout_marginTop="@dimen/margin_between_fields_login_register_section_custom_edit_text"
                app:hintSize="@dimen/hint_size_login_register"
                app:hintSizeFocused="@dimen/hint_size_focused_login_register"
                app:textSize="@dimen/hint_size_login_register"
                app:customBackground="@drawable/background_edittext_login_register"
        />

        <com.workoutlog.workoutlog.views.CustomEditText
                android:id="@+id/edittext_fragment_register_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textfield_height_login_register"
                app:hint="@string/password"
                app:layout_constraintTop_toBottomOf="@id/edittext_fragment_register_email"
                android:layout_marginTop="@dimen/margin_between_fields_login_register_section_custom_edit_text"
                app:hintSize="@dimen/hint_size_login_register"
                app:hintSizeFocused="@dimen/hint_size_focused_login_register"
                app:textSize="@dimen/hint_size_login_register"
                app:isPassword="true"
                app:customBackground="@drawable/background_edittext_login_register"
        />

        <com.workoutlog.workoutlog.views.CustomEditText
                android:id="@+id/edittext_fragment_register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textfield_height_login_register"
                app:hint="@string/confirm_password"
                app:layout_constraintTop_toBottomOf="@+id/edittext_fragment_register_password"
                android:layout_marginTop="@dimen/margin_between_fields_login_register_section_custom_edit_text"
                app:customBackground="@drawable/background_edittext_login_register"
                app:isPassword="true"
                app:hintSizeFocused="@dimen/hint_size_focused_login_register"
                app:textSize="@dimen/hint_size_login_register"
                app:hintSize="@dimen/hint_size_login_register"
        />

        <Button
                android:id="@+id/button_fragment_register_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                app:layout_constraintTop_toBottomOf="@+id/edittext_fragment_register_confirm_password"
                android:text="@string/register"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/margin_between_fields_login_register_section_custom_edit_text"
                android:background="@drawable/background_button"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>