<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <TextView
            android:id="@+id/text_view_view_full_dropset_exc_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_home_fragment_small"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />

    <LinearLayout
            android:id="@+id/ll_view_full_dropset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_view_full_exercise"
            android:layout_marginStart="@dimen/margin_left_view_full_exercise"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_view_full_dropset_exc_name"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_home_fragment_small"
                android:textColor="@color/colorPrimary"
                android:text="@string/sets"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_home_fragment_small"
                android:textColor="@color/colorPrimary"
                android:text="@string/reps"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_home_fragment_small"
                android:textColor="@color/colorPrimary"
                android:text="@string/drops"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_home_fragment_small"
                android:textColor="@color/colorPrimary"
                android:text="@string/break_seconds"
        />
    </LinearLayout>

    <TextView
            android:id="@+id/text_view_view_full_dropset_sets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_home_fragment_small"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toRightOf="@id/ll_view_full_dropset"
            app:layout_constraintTop_toTopOf="@id/ll_view_full_dropset"
            android:layout_marginLeft="@dimen/margin_left_view_full_exercise"
            android:layout_marginStart="@dimen/margin_left_view_full_exercise"/>

    <TextView
            android:id="@+id/text_view_view_full_dropset_reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_home_fragment_small"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toRightOf="@id/ll_view_full_dropset"
            app:layout_constraintTop_toBottomOf="@+id/text_view_view_full_dropset_sets"
            android:layout_marginLeft="@dimen/margin_left_view_full_exercise"
            android:layout_marginStart="@dimen/margin_left_view_full_exercise"/>

    <TextView
            android:id="@+id/text_view_view_full_dropset_drops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_home_fragment_small"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toRightOf="@id/ll_view_full_dropset"
            app:layout_constraintTop_toBottomOf="@+id/text_view_view_full_dropset_reps"
            android:layout_marginLeft="@dimen/margin_left_view_full_exercise"
            android:layout_marginStart="@dimen/margin_left_view_full_exercise"/>

    <TextView
            android:id="@+id/text_view_view_full_dropset_break"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_home_fragment_small"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toRightOf="@id/ll_view_full_dropset"
            app:layout_constraintTop_toBottomOf="@+id/text_view_view_full_dropset_drops"
            android:layout_marginLeft="@dimen/margin_left_view_full_exercise"
            android:layout_marginStart="@dimen/margin_left_view_full_exercise"/>

</androidx.constraintlayout.widget.ConstraintLayout>